--- a/application/modules/admin/views/scripts/countrys/index.phtml
+++ b/application/modules/admin/views/scripts/countrys/index.phtml
@@ -129,7 +129,7 @@
                 <div class="block-content collapse in">
                     <div class="table-toolbar">
                       <div class="btn-group">
-                         <a href="/main/users/getinfo?catId=-1"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
+                         <a href="/distribuitor/main/getinfo?catId=-1&codeCountry=<?php echo $this->dataInfo['code'];?>"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
                       </div>
                     </div> 
                 	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
@@ -139,7 +139,7 @@
                                 <th>Ubicacion</th>
                                 <th>Contacto</th>
                                 <th>Estatus</th>                                
-                                <th width="30"></th>
+                                <th width="50"></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -151,10 +151,16 @@
                                     <td><?php echo $items['contacto'];?></td>
                                     <td><?php echo $items['ESTATUS'];?></td>		                                    
                                     <td class="text-center">
-                                        <a href="/atn/services/exportsearch?strInput=<?php echo $items['ID']; ?>">
-                                            <button class="btn btn-info"> <i class="icon-info-sign  icon-white"></i>
+                                        <!--
+                                        <a href="/admin/dealers/getinfo?catId=<?php echo $items['ID']; ?>&codeCountry=<?php echo $this->dataInfo['code'];?>">
+                                            <button class="btn btn-primary"> <i class="icon-edit icon-white"></i>
                                             </button>
-                                        </a>
+                                        </a>-->
+
+                                        <a href="/distribuitor/main/index?catId=<?php echo $items['ID']; ?>&codeCountry=<?php echo $this->dataInfo['code'];?>">
+                                            <button class="btn btn-success"> <i class="icon-circle-arrow-right icon-white "></i>
+                                            </button>
+                                        </a>                                        
                                     </td>
                                 </tr>
                             <?php  endforeach;?>
@@ -164,58 +170,4 @@
             </div>
             <!-- /block -->
         </div>
-    </div>
-    <!--
-    <div class="row-fluid">
-        <div class="span12">
-            
-            <div class="block">
-                <div class="navbar navbar-inner block-header">
-                    <div class="muted pull-left">Clientes</div>
-                    <div class="pull-right">
-
-                    </div>
-                </div>
-                <div class="block-content collapse in">
-                    <div class="table-toolbar">
-                      <div class="btn-group">
-                         <a href="/main/users/getinfo?catId=-1"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
-                      </div>
-                    </div>                 	
-                	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
-                        <thead>             
-                            <tr>
-                                <th>Nombre</th>
-                                <th>Pais</th>
-                                <th>Distribuidor</th>
-                                <th>Usuario</th>
-                                <th>Ult. Acceso</th>
-                                <th>No. SAP</th>				                                
-                                <th width="30"></th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <?php $result = '';?>
-                            <?php foreach($this->aClientes as $key => $items): ?>
-                                <tr>                   
-                                    <td><?php echo $items['NOMBRE'];?></td>
-                                    <td><?php echo $items['PAIS'];?></td>
-                                    <td><?php echo $items['NDISTRIBUIDOR'];?></td>
-                                    <td><?php echo $items['clt_email'];?></td>
-                                    <td><?php echo $items['clt_fecha_acceso'];?></td>
-                                    <td><?php echo $items['clt_sap_cardcode'];?></td>				                                    
-                                    <td class="text-center">
-                                        <a href="/atn/services/exportsearch?strInput=<?php echo $items['ID']; ?>">
-                                            <button class="btn btn-info"> <i class="icon-info-sign icon-white"></i>
-                                            </button>
-                                        </a>
-                                    </td>
-                                </tr>
-                            <?php  endforeach;?>
-                        </tbody>
-            		</table>   
-                </div>
-            </div>         
-        </div>
-
-    </div>                        -->
+    </div> 
