--- a/application/modules/distribuitor/views/scripts/main/index.phtml
+++ b/application/modules/distribuitor/views/scripts/main/index.phtml
@@ -1,1 +1,131 @@
-<?php
+<?php $this->headScript()->appendFile('/js/modules/dealers/index.js') ?>	
+	<div class="row-fluid">
+		<div class="navbar m-top-3 no-margin-b">
+	    	<div class="navbar-inner">
+	            <ul class="breadcrumb span6">
+	                <i class="icon-chevron-left hide-sidebar"><a href="#" title="Hide Sidebar" rel="tooltip">&nbsp;</a></i>
+	                <i class="icon-chevron-right show-sidebar" style="display:none;"><a href="#" title="Show Sidebar" rel="tooltip">&nbsp;</a></i>
+                    <?php if(@$this->dataUser['adm_tipo']==1) :?>
+                        <li>
+                            <a href="/admin/countrys/index?catId=<?php echo $this->dataCountry['code'];?>">Pais</a> <span class="divider">/</span>    
+                        </li>
+                    <?php endif;?>                                        
+	                <li class="active"><?php echo $this->data['nombre'];?></li>
+	            </ul>
+		    	<div class="pull-right">
+		    		<a href="/distribuitor/main/getinfo?catId=<?php echo $this->data['id_distribuidor']; ?>&codeCountry=<?php echo $this->data['cod_pais'];?>" class="btn"><i class="icon-edit"></i></a>
+		    	</div>	            
+	    	</div>
+		</div>
+	</div>
+
+	<div class="row-fluid">	    
+            <!-- /block -->
+        <div class="span12">
+            <!-- block -->
+            <div class="block">
+                <div class="navbar navbar-inner block-header">
+                    <div class="muted pull-left">Clientes</div>
+                    <div class="pull-right">
+
+                    </div>
+                </div>
+                <div class="block-content collapse in">
+                    <div class="table-toolbar">                    
+                      <div class="btn-group">
+                         
+                      </div>
+                    </div>                 	
+                	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
+                        <thead>             
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Estado</th>
+                                <th>Usuario</th>                                
+                                <th>Total Mascotas</th>  
+                                <th>Ult. Acceso</th>
+                                <th>Total Accesos</th>
+                                <th width="30"></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <?php $result = '';?>
+                            <?php foreach($this->aClients as $key => $items): ?>
+                                <tr>      
+                                    <td><?php echo $items['NOMBRE'];?></td>
+                                    <td><?php echo $items['PAIS'];?></td>
+                                    <td><?php echo $items['clt_email'];?></td>
+                                    <td><?php echo $items['TOTAL_PET'];?></td>
+                                    <td><?php echo $items['clt_fecha_acceso'];?></td>
+                                    <td><?php echo $items['clt_accesos'];?></td>                                    
+                                    <td class="text-center">
+                                        <a href="/admin/banners/getinfo?catId=<?php echo $items['ID']; ?>&codeCountry=<?php echo $this->dataInfo['code'];?>">
+                                            <button class="btn btn-info"> <i class="icon-info-sign icon-white"></i>
+                                            </button>
+                                        </a>
+                                    </td>
+                                </tr>
+                            <?php  endforeach;?>
+                        </tbody>
+            		</table> 
+                </div>
+            </div>            
+        </div>
+    </div>   
+
+	<div class="row-fluid">
+	<div class="span12">
+        <div class="block">
+            <div class="navbar navbar-inner block-header">
+                <div class="muted pull-left">Equipos</div>             
+            </div>
+            <div class="block-content collapse in">
+                <div class="span12">
+	                <div class="table-toolbar">
+	                  <div class="btn-group">
+	                     <a href="/distribuitor/equipments/moreinfo?catId=-1&codeCountry=<?php echo $this->data['cod_pais'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
+	                  </div>
+	                </div>  
+                </div>                       
+ 					<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
+                        <thead>             
+                            <tr>
+                                <th>IMEI</th>
+                                <th>Estatus</th>
+                                <th>Mascota</th>
+                                <th>Estatus Mascota</th>
+                                <th>U. Reporte</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <?php $result = '';?>
+                            <?php foreach($this->aTrackers as $key => $items): ?>
+                                <tr> 
+                                    <td><?php echo $items['gpsTrackerIMEI'];?></td>                                    
+                                    <td><?php echo $items['ESTATUS'];?></td>
+                                    <td><?php echo $items['MASCOTA'];?></td>
+                                    <td><?php echo $items['ESTATUS_MASCOTA'];?></td>
+                                    <td><?php echo $items['U_REPORTE'];?></td>
+                                    <td class="text-center">
+                                            <a href="/distribuitor/equipments/moreinfo?catId=<?php echo $items['gpsTrackerID']; ?>&codeCountry=<?php echo $this->data['cod_pais'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>">
+                                            <button class="btn"> <i class="icon-eye-open "></i>
+                                            </button>
+                                        </a>
+                                    </td>
+                                </tr> 
+                                <?php if(isset($items['ASIGNADO']) && $items['ASIGNADO'] == 'Sin Asignar'):?>
+                                    <?php @$arResume['NoAsignar']++;?>
+                                <?php elseif(isset($items['U_REPORTE'])):?>
+                                    <?php @$arResume['Reportando']++;?>
+                                <?php elseif(isset($items['ASIGNADO']) && $items['ASIGNADO'] == 'Asignado' && !isset($items['U_REPORTE'])):?>
+                                    <?php @$arResume['Asignado']++;?>
+                                <?php endif;?>                                
+                            <?php  endforeach;?>
+                        </tbody>
+                </div>
+            </div>
+        </div>
+        <!-- /block -->
+    </div>
+</div>
