--- a/application/modules/distribuitor/views/scripts/main/index.phtml
+++ b/application/modules/distribuitor/views/scripts/main/index.phtml
@@ -107,9 +107,9 @@
                                     <td><?php echo $items['MASCOTA'];?></td>
                                     <td><?php echo $items['ESTATUS_MASCOTA'];?></td>
                                     <td><?php echo $items['U_REPORTE'];?></td>
-                                    <td class="text-center">
+                                    <td class="text-center">                           	
                                             <a href="/distribuitor/equipments/moreinfo?catId=<?php echo $items['gpsTrackerID']; ?>&codeCountry=<?php echo $this->data['cod_pais'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>">
-                                            <button class="btn"> <i class="icon-eye-open "></i>
+                                             <button class="btn btn-info"> <i class="icon-info-sign icon-white"></i>
                                             </button>
                                         </a>
                                     </td>
