--- a/application/modules/distribuitor/views/scripts/main/getinfo.phtml
+++ b/application/modules/distribuitor/views/scripts/main/getinfo.phtml
@@ -266,6 +266,28 @@
                                         </div>                                                                           
                                     </div>
                                 </div>   
+
+                                <h4>Información Tracker:</h4>
+        
+                                <div class="span12 formcustom">
+                                    <div class="span6">
+                                        <div class="control-group">
+                                            <label class="control-label">Precio Productos (Trackers)</label>
+                                            <div class="controls">
+                                                <input name="inputPrice" type="text" class="span12 m-wrap" value="<?php echo @$this->data['precio_distribuidor']; ?>" <?php echo $disabled;?> >
+                                            </div>
+                                        </div> 
+                                
+                                     </div>
+                                    <div class="span6">  
+                                        <!--<div class="control-group">
+                                            <label class="control-label">Email Contacto</label>
+                                            <div class="controls">
+                                                <input name="inputEmContacto" type="text" class="span12 m-wrap" value="<?php echo @$this->data['contacto_email']; ?>" <?php echo $disabled;?> >
+                                            </div>
+                                        </div>   -->                                                                    
+                                    </div>
+                                </div>                                  
                                 
                                  <div class="control-group">
                                     <div class="controls">
