--- a/public/assets/DT_bootstrap.css
+++ b/public/assets/DT_bootstrap.css
@@ -86,18 +86,19 @@ div.dataTables_scrollFoot table {
  */
 .table tbody tr.active td,
 .table tbody tr.active th {
-	background-color: #08C;
-	color: white;
+	background-color: #F2F2F2 !important;
+	color: #000000 !important;
 }
 
 .table tbody tr.active:hover td,
 .table tbody tr.active:hover th {
-	background-color: #0075b0 !important;
+	background-color: #F2F2F2 !important;
 }
 
 .table-striped tbody tr.active:nth-child(odd) td,
 .table-striped tbody tr.active:nth-child(odd) th {
-	background-color: #017ebc;
+	background-color: #F2F2F2 !important;
+	color: #000000 !important;
 }
 
 table.DTTT_selectable tbody tr {
