--- a/application/modules/distribuitor/views/scripts/main/index.phtml
+++ b/application/modules/distribuitor/views/scripts/main/index.phtml
@@ -13,7 +13,7 @@
 	                <li class="active"><?php echo $this->data['nombre'];?></li>
 	            </ul>
 		    	<div class="pull-right">
-		    		<a href="/distribuitor/main/getinfo?catId=<?php echo $this->data['id_distribuidor']; ?>&codeCountry=<?php echo $this->dataCountry['cod_pais'];?>" class="btn"><i class="icon-edit"></i></a>
+		    		<a href="/distribuitor/main/getinfo?catId=<?php echo $this->data['id_distribuidor']; ?>&codeCountry=<?php echo $this->dataCountry['code'];?>" class="btn"><i class="icon-edit"></i></a>
 		    	</div>	            
 	    	</div>
 		</div>
@@ -36,7 +36,7 @@
                          
                       </div>
                     </div>                 	
-                	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
+                	<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="">
                         <thead>             
                             <tr>
                                 <th>Nombre</th>
@@ -73,21 +73,25 @@
         </div>
     </div>   
 
-	<div class="row-fluid">
-	<div class="span12">
-        <div class="block">
-            <div class="navbar navbar-inner block-header">
-                <div class="muted pull-left">Equipos</div>             
-            </div>
-            <div class="block-content collapse in">
-                <div class="span12">
-	                <div class="table-toolbar">
-	                  <div class="btn-group">
-	                     <a href="/distribuitor/equipments/moreinfo?catId=-1&codeCountry=<?php echo $this->dataCountry['code'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
-	                  </div>
-	                </div>  
-                </div>                       
- 					<table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="dataTable">
+
+    <div class="row-fluid">     
+            <!-- /block -->
+        <div class="span12">
+            <!-- block -->
+            <div class="block">
+                <div class="navbar navbar-inner block-header">
+                    <div class="muted pull-left">Equipos</div>
+                    <div class="pull-right">
+
+                    </div>
+                </div>
+                <div class="block-content collapse in">
+                    <div class="table-toolbar">                    
+                      <div class="btn-group">
+                         <a href="/distribuitor/equipments/moreinfo?catId=-1&codeCountry=<?php echo $this->dataCountry['code'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>"><button class="btn btn-success"> Agregar <i class="icon-plus icon-white"></i></button></a>
+                      </div>
+                    </div>                  
+                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="">
                         <thead>             
                             <tr>
                                 <th>IMEI</th>
@@ -107,7 +111,7 @@
                                     <td><?php echo $items['MASCOTA'];?></td>
                                     <td><?php echo $items['ESTATUS_MASCOTA'];?></td>
                                     <td><?php echo $items['U_REPORTE'];?></td>
-                                    <td class="text-center">                           	
+                                    <td class="text-center">                            
                                             <a href="/distribuitor/equipments/moreinfo?catId=<?php echo $items['gpsTrackerID']; ?>&codeCountry=<?php echo $this->dataCountry['code'];?>&codeDist=<?php echo $this->data['id_distribuidor']; ?>">
                                              <button class="btn btn-info"> <i class="icon-info-sign icon-white"></i>
                                             </button>
@@ -123,9 +127,78 @@
                                 <?php endif;?>                                
                             <?php  endforeach;?>
                         </tbody>
+                    </table> 
                 </div>
-            </div>
+            </div>            
         </div>
-        <!-- /block -->
+    </div>     
+
+
+    <div class="row-fluid">     
+            <!-- /block -->
+        <div class="span12">
+            <!-- block -->
+            <div class="block">
+                <div class="navbar navbar-inner block-header">
+                    <div class="muted pull-left">Ventas</div>
+                    <div class="pull-right">
+
+                    </div>
+                </div>
+                <div class="block-content collapse in">
+                    <div class="table-toolbar">                    
+                      <div class="btn-group">
+                         
+                      </div>
+                    </div>                  
+                    <table cellpadding="0" cellspacing="0" border="0" class="table table-striped table-bordered dataTable"  id="">
+                        <thead>             
+                            <tr>
+                                <th>Id Venta</th>
+                                <th>Cliente</th>
+                                <th>Fecha Venta</th>                                
+                                <th># Productos</th>
+                                <th>Total</th>
+                                <th>Pagado</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <?php $result = '';?>
+                            <?php foreach($this->aPedidos as $key => $items): ?>
+                                <tr> 
+                                    <td><?php echo $items['pdd_id'];?></td>  
+                                    <td><?php echo $items['CLIENTE'];?></td>  
+                                    <td><?php echo $items['pdd_fecha_alta'];?></td>
+                                    <td><?php echo $items['pdd_cantidad'];?></td>                                      
+                                    <td><?php echo "$ ".number_format($items['pdd_total'], 2);?></td>
+                                    <td><?php echo $items['E_PAGO'];?></td>                                    
+                                    <td class="text-center">  
+                                        <a href="javascript:showDetail(<?php echo $items['pdd_id']; ?>);">
+                                        <button class="btn btn-info"> <i class="icon-info-sign icon-white"></i></button>
+                                        </a>
+                                    </td>
+                                </tr>                            
+                            <?php  endforeach;?>                                
+                        </tbody>
+                    </table> 
+                </div>
+            </div>            
+        </div>
+    </div>    
+
+
+<div class="modal fade hide modal-lg" id="myModalinfoVis" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+  <div class="modal-dialog ">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" ></h4>
+        </div>
+      <div class="modal-form i-body">  
+        <img id="loader1" class="offset4" src="/images/assets/loading.gif" alt="loading gif"/>           
+        <iframe class="hmodal500" id="iFrameSearch" src="" style="zoom:0" frameborder="0"></iframe>
+      </div>
     </div>
-</div>
+  </div>
+</div>  
