--- a/application/modules/admin/views/scripts/admongral/moreinfo.phtml
+++ b/application/modules/admin/views/scripts/admongral/moreinfo.phtml
@@ -74,7 +74,14 @@
 									<div class="controls">
 										<input name="inputTextDivisa" type="text" class="span6 m-wrap" value="<?php echo @$this->data['texto_divisa']; ?>" <?php echo $disabled;?> >
 									</div>
-								</div>										
+								</div>
+
+								<div class="control-group">
+									<label class="control-label">Diferencia Horario<span class="required">*</span></label>
+									<div class="controls">
+										<input name="inputDiferencia" type="text" class="span6 m-wrap" value="<?php echo @$this->data['diferencia_horario']; ?>" <?php echo $disabled;?> >
+									</div>
+								</div>																			
 
 								<div class="control-group">
 									<label class="control-label">Estatus<span class="required">*</span></label>
